--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-candidateId=1
-candaidate.threshold.startconsensus.votecount=5
+candidateId=5
+#candaidate.threshold.startconsensus.votecount=10
 activemq.broker-url=tcp://localhost:61616
 Vote.topicname=Votes.topic
 Candidate.genesis.topicname=Candidate.genesis.topic
