--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-candidateId=5
-#candaidate.threshold.startconsensus.votecount=10
+candidateId=1
 activemq.broker-url=tcp://localhost:61616
 Vote.topicname=Votes.topic
 Candidate.genesis.topicname=Candidate.genesis.topic
@@ -11,3 +10,4 @@ Tally.prepare.vote.topicname=tally.prepare.topic
 Tally.commit.vote.topicname=tally.commit.topic
 Tally.reply.vote.topicname=tally.reply.topic
 Consensus.statistics=consensus.statistics.topic
+Tally.statistics=tally.statistics.topic
